# predict-client-rs

./: Cargo.toml  LICENSE  README.md  README.zh-CN.md  build.rs
graphql/: schema.graphql
openapi/: openapi.json
src/: client.rs  contracts.rs  error.rs  lib.rs  order_builder.rs  order_math.rs  signing.rs  types.rs
src/graphql/: enums.rs  inputs.rs  mod.rs  queries.rs  scalars.rs  schema.rs
src/openapi/: auth.rs  codegen.rs  markets.rs  mod.rs  orderbook.rs  orders.rs  positions.rs  state.rs
src/openapi/domain/: auth.rs  enums.rs  market.rs  mod.rs  order.rs  orderbook.rs  position.rs
